src/objects/Question__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Type__c</fullName>
        <label>Answer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Select</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Select</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Options__c</fullName>
        <description>Single Select/Multi Select: Enter valid pipe &apos;|&apos; separated values.
Number: Enter a range of allowable value
Free Text &amp; Date: Not reuired</description>
        <label>Options</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Question</label>
    <nameField>
        <label>Question Short Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Question</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>